# 9.s916-course-materials

./: .gitignore  .pre-commit-config.yaml  DEVELOPING.md  LICENSE  README.md  pyproject.toml  robot_program.json
.github/workflows/: pyright.yml  ruff.yml
scripts/: bootstrap-env.sh
src/: lab-exercises-full.ipynb  lab-exercises-full.py  lab-exercises.ipynb  lab-exercises.py  localization-tutorial.ipynb  localization-tutorial.py  world.json  world_small.json
