[project]
authors = [
    {name = "Jay Pottharst", email = "jay@chi-fro.org"},
    {name = "Vikash Mansinghka", email = "vkm@chi-fro.org"},
]
name = "localization-tutorial"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["genstudio>=2025.2.3,<2026", "genjax==0.10.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.activation.env]
XLA_PYTHON_CLIENT_PREALLOCATE = "false"
XLA_PYTHON_CLIENT_ALLOCATOR = "platform"

[tool.pixi.environments]
cpu = { features = ["cpu"], solve-group = "default" }
gpu = { features = ["cuda"], solve-group = "default" }

[tool.pixi.pypi-dependencies]
localization_tutorial = { path = ".", editable = true }

[tool.pixi.tasks]
lab = "jupyter lab src/localization-tutorial.ipynb"

[tool.pixi.dependencies]
jupytext = ">=1.16.7,<2"
ipykernel = ">=6.29.5,<7"
ipython = ">=8.32.0,<9"
numpy = "<2.0.0"
jupyter = ">=1.1.1,<2"

[tool.pixi.feature.cpu.pypi-dependencies]
jax = ">=0.4.24,<0.5.0"

[tool.pixi.feature.cuda]
platforms = ["linux-64", "osx-arm64"]
system-requirements = { cuda = "12.4" }

[tool.pixi.feature.cuda.target.linux-64.dependencies]
cudnn = ">=9.7.1.26,<10"

[tool.pixi.feature.cuda.target.linux-64.pypi-dependencies]
jax = { version = ">=0.4.35", extras = ["cuda12-local"] }

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
exclude = ["src/localization-tutorial.*"]
